topMenu near finish

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -26,15 +26,60 @@
     <header>
         <div id="topMenu">
             <div class="right">
-                <div class="logo">
+                <a href="index.html" class="logo">
                     <img src="../assets/icons/logo.png" alt="logoAlt">
                     <p>آلومینیوم استاندارد اراک</p>
-                </div>
+                </a>
                 <a href="basket.html" class="badge withIcon">
-                    <i class="fas fa"></i>
+                    <i class="badge"></i>
+                    <i class="fas fa-shopping-basket"></i>
+                    <p>سبد خرید</p>
+                </a>
+                <a href="special.html" class="withIcon">
+                    <i class="fas fa-dolly-flatbed"></i>
+                    <p>سفارش اختصاصی</p>
+                </a>
+                <div id="mobileMenu">
+                    <i class="fas fa-bars"></i>
+                    <ul>
+                        <li>
+                            <a href="login.html">
+                                <i class="fas fa-user"></i>
+                                <p>ورود / ثبت نام</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="basket.html">
+                                <i class="badge"></i>
+                                <i class="fas fa-shopping-basket"></i>
+                                <p>سبد خرید</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="login.html">
+                                <i class="fas fa-dolly-flatbed"></i>
+                                <p>سفارش اختصاصی</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="login.html">
+                                <i class="fas fa-headset"></i>
+                                <p> پشتیبانی </p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="left">
+                <a href="login.html" class="withBorder withIcon">
+                    <i class="fas fa-user"></i>
+                    <p>ورود / ثبت نام</p>
+                </a>
+                <a href="support.html" class="withIcon">
+                    <i class="fas fa-headset"></i>
+                    <p> پشتیبانی </p>
                 </a>
             </div>
-            <div class="left"></div>
         </div>
     </header>
 </body>
