search and top menu

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -50,7 +50,6 @@
                         </li>
                         <li>
                             <a href="basket.html">
-                                <i class="badge"></i>
                                 <i class="fas fa-shopping-basket"></i>
                                 <p>سبد خرید</p>
                             </a>
@@ -81,6 +80,122 @@
                 </a>
             </div>
         </div>
+        <form novalidate id="searchForm" name="searchForm" action="#!" method="GET" enctype="text/plain">
+            <div class="productsWrapper">
+                <div class="title">
+                    <i class="fas fa-ellipsis-v"></i>
+                    <p>لیست محصولات</p>
+                </div>
+                <ul class="categories">
+                     <li>
+                         <div class="name">
+                             <p>نام دسته بندی</p>
+                             <i class="fas fa-angle-left"></i>
+                         </div>
+                         <div class="menu">
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                         </div>
+                     </li>
+                     <li>
+                         <div class="name">
+                             <p>نام دسته بندی</p>
+                             <i class="fas fa-angle-left"></i>
+                         </div>
+                         <div class="menu">
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                         </div>
+                     </li>
+                     <li>
+                         <div class="name">
+                             <p>نام دسته بندی</p>
+                             <i class="fas fa-angle-left"></i>
+                         </div>
+                         <div class="menu">
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                         </div>
+                     </li>
+                     <li>
+                         <div class="name">
+                             <p>نام دسته بندی</p>
+                             <i class="fas fa-angle-left"></i>
+                         </div>
+                         <div class="menu">
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                         </div>
+                     </li>
+                     <li>
+                         <div class="name">
+                             <p>نام دسته بندی</p>
+                             <i class="fas fa-angle-left"></i>
+                         </div>
+                         <div class="menu">
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                         </div>
+                     </li>
+                     <li>
+                         <div class="name">
+                             <p>نام دسته بندی</p>
+                             <i class="fas fa-angle-left"></i>
+                         </div>
+                         <div class="menu">
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                             <a href="products.html">نام زیرمجموعه</a>
+                         </div>
+                     </li>
+                </ul>
+            </div>
+            <div class="inputWrapper withSubmit">
+                <input type="text" id="search" name="search" class="validate" placeholder="جست و جوی محصول" required>
+                <button type="submit">
+                    <i class="fas fa-search"></i>
+                </button>
+                <div class="msg">
+                    <i class="fas fa-caret-up"></i>
+                    <p>باید مقداری را وارد کنید</p>
+                </div>
+            </div>
+        </form>
     </header>
 </body>
 </html>
