--- a/src/index/index.html
+++ b/src/index/index.html
@@ -916,5 +916,67 @@
             </div>
         </div> 
     </div>
+    <div id="partners" class="autoSlider containerStyle">
+        <div class="skewContainer">
+            <div class="skew">
+                <h4> همکاران ما </h4>
+            </div>
+        </div>
+        <div class="slider">
+            <div class="slide">
+                <img src="../assets/icons/partner1.png" alt="partnerAlt">
+                <h6>نام شرکت</h6>
+            </div>
+            <div class="slide">
+                <img src="../assets/icons/partner2.png" alt="partnerAlt">
+                <h6>نام شرکت</h6>
+            </div>
+            <div class="slide">
+                <img src="../assets/icons/partner3.png" alt="partnerAlt">
+                <h6>نام شرکت</h6>
+            </div>
+            <div class="slide">
+                <img src="../assets/icons/partner4.png" alt="partnerAlt">
+                <h6>نام شرکت</h6>
+            </div>
+            <div class="slide">
+                <img src="../assets/icons/partner5.png" alt="partnerAlt">
+                <h6>نام شرکت</h6>
+            </div>
+            <div class="slide">
+                <img src="../assets/icons/partner1.png" alt="partnerAlt">
+                <h6>نام شرکت</h6>
+            </div>
+            <div class="slide">
+                <img src="../assets/icons/partner2.png" alt="partnerAlt">
+                <h6>نام شرکت</h6>
+            </div>
+            <div class="slide">
+                <img src="../assets/icons/partner3.png" alt="partnerAlt">
+                <h6>نام شرکت</h6>
+            </div>
+            <div class="slide">
+                <img src="../assets/icons/partner4.png" alt="partnerAlt">
+                <h6>نام شرکت</h6>
+            </div>
+            <div class="slide">
+                <img src="../assets/icons/partner5.png" alt="partnerAlt">
+                <h6>نام شرکت</h6>
+            </div>
+          
+        </div>
+    </div>
+    <div id="agents" class="containerStyle">
+        <div class="img"></div>
+        <div class="content">
+            <h4>نمایندگان</h4>
+            <p>متن کوتاه متن کوتاه متن کوتاه متن کوتاه</p>
+            <div class="row">
+                <a href="agentRequest.html">درخواست نمایندگی</a>
+                <a href="agents.html">لیست نمایندگان</a>
+            </div>
+        </div>
+    </div>
+    <div style="height: 2000px;"></div>
 </body>
 </html>
