full index and create other pages proto

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -977,6 +977,136 @@
             </div>
         </div>
     </div>
-    <div style="height: 2000px;"></div>
+    <div id="articles" class="containerStyle">
+        <div class="skewContainer">
+            <div class="skew">
+                <h4> مقالات </h4>
+            </div>
+        </div>
+        <div class="articles">
+            <a href="articles.html" class="article">
+                <img src="../assets/imgs/img1.jpg" alt="articleAlt">
+                <p>نام دسته بندی مقالات</p>
+            </a>
+            <a href="articles.html" class="article">
+                <img src="../assets/imgs/img2.jpg" alt="articleAlt">
+                <p>نام دسته بندی مقالات</p>
+            </a>
+            <a href="articles.html" class="article">
+                <img src="../assets/imgs/img3.jpg" alt="articleAlt">
+                <p>نام دسته بندی مقالات</p>
+            </a>
+            <a href="articles.html" class="article">
+                <img src="../assets/imgs/img4.jpg" alt="articleAlt">
+                <p>نام دسته بندی مقالات</p>
+            </a>
+        </div>
+    </div>
+    <footer>
+        <div class="row">
+            <div class="col">
+                <div class="title">
+                    <i class="fas fa-info"></i>
+                    <h6>درباره ما</h6>
+                </div>
+                <div class="content">
+                    <p>
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                        متن در باره ما
+                    </p>
+                </div>      
+            </div>
+            <div class="col">
+                <div class="title">
+                    <i class="fas fa-link"></i>
+                    <h6>لینک های مفید</h6>
+                </div>
+                <div class="content">
+                    <a href="agents.html">لیست نمایندگان</a>
+                    <a href="agentsRequest.html">درخواست نمایندگی</a>
+                    <a href="special.html">سفارش اختصاصی</a>
+                    <a href="faq.html">سوالات متداول</a>
+                    <a href="articles.html">وبلاگ</a>
+                </div>    
+            </div>
+            <div class="col">
+                <div class="title">
+                    <i class="fas fa-comment"></i>
+                    <h6> ارتباط با ما </h6>
+                </div>
+                <div class="content">
+                    <a href="support.html">پشتیبانی</a>
+                    <div class="withIcon">
+                        <i class="fas fa-envelope"></i>
+                        <p>something@gmail.com</p>
+                    </div>
+                    <div class="withIcon">
+                        <i class="fas fa-phone"></i>
+                        <p>051-38670000</p>
+                    </div>
+                    <div class="withIcon">
+                        <i class="fas fa-map-marked-alt"></i>
+                        <p>مشهد - صیادشیرازی ۲۵ پلاک ۲</p>
+                    </div>
+                </div>
+                <div class="socials">
+                    <a href="#!">
+                        <i class="fab fa-telegram-plane"></i>
+                    </a>
+                    <a href="#!">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="#!">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <a href="#!">
+                <img src="../assets/icons/namad.png" alt="namadAlt">
+            </a>
+            <a href="#!">
+                <img src="../assets/icons/namad.png" alt="namadAlt">
+            </a>
+            <a href="#!">
+                <img src="../assets/icons/namad.png" alt="namadAlt">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
