special order and agents

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -972,8 +972,8 @@
             <h4>نمایندگان</h4>
             <p>متن کوتاه متن کوتاه متن کوتاه متن کوتاه</p>
             <div class="row">
-                <a href="agentRequest.html">درخواست نمایندگی</a>
                 <a href="agents.html">لیست نمایندگان</a>
+                <a href="projs.html"> نمونه کارها </a>
             </div>
         </div>
     </div>
@@ -1056,10 +1056,11 @@
                     <h6>لینک های مفید</h6>
                 </div>
                 <div class="content">
+                    <a href="support.html">پشتیبانی</a>
                     <a href="agents.html">لیست نمایندگان</a>
-                    <a href="agentsRequest.html">درخواست نمایندگی</a>
-                    <a href="special.html">سفارش اختصاصی</a>
+                    <a href="projs.html"> نمونه کارها </a>
                     <a href="faq.html">سوالات متداول</a>
+                    <a href="special.html">سفارش اختصاصی</a>
                     <a href="articles.html">وبلاگ</a>
                 </div>    
             </div>
@@ -1069,7 +1070,6 @@
                     <h6> ارتباط با ما </h6>
                 </div>
                 <div class="content">
-                    <a href="support.html">پشتیبانی</a>
                     <div class="withIcon">
                         <i class="fas fa-envelope"></i>
                         <p>something@gmail.com</p>
