add product and half basket

--- a/src/index/index.html
+++ b/src/index/index.html
@@ -314,7 +314,7 @@
                 <i class="fas fa-angle-left center-xy"></i>
             </button>
             <div class="slides" style="right:0px">
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img1.jpg" alt="slideAlt">
                         <div class="info">
@@ -338,7 +338,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img2.jpg" alt="slideAlt">
                         <div class="info">
@@ -362,7 +362,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img3.jpg" alt="slideAlt">
                         <div class="info">
@@ -386,7 +386,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img4.jpg" alt="slideAlt">
                         <div class="info">
@@ -410,7 +410,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img1.jpg" alt="slideAlt">
                         <div class="info">
@@ -434,7 +434,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img2.jpg" alt="slideAlt">
                         <div class="info">
@@ -458,7 +458,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img3.jpg" alt="slideAlt">
                         <div class="info">
@@ -482,7 +482,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img4.jpg" alt="slideAlt">
                         <div class="info">
@@ -506,7 +506,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img1.jpg" alt="slideAlt">
                         <div class="info">
@@ -530,7 +530,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img2.jpg" alt="slideAlt">
                         <div class="info">
@@ -554,7 +554,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img3.jpg" alt="slideAlt">
                         <div class="info">
@@ -578,7 +578,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img4.jpg" alt="slideAlt">
                         <div class="info">
@@ -601,7 +601,7 @@
                            <p class="final">500000 تومان</p>
                         </div>
                     </div>         
-                </a>    
+                </a>              
             </div>
         </div> 
     </div>
@@ -625,7 +625,7 @@
                 <i class="fas fa-angle-left center-xy"></i>
             </button>
             <div class="slides" style="right:0px">
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img1.jpg" alt="slideAlt">
                         <div class="info">
@@ -649,7 +649,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img2.jpg" alt="slideAlt">
                         <div class="info">
@@ -673,7 +673,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img3.jpg" alt="slideAlt">
                         <div class="info">
@@ -697,7 +697,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img4.jpg" alt="slideAlt">
                         <div class="info">
@@ -721,7 +721,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img1.jpg" alt="slideAlt">
                         <div class="info">
@@ -745,7 +745,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img2.jpg" alt="slideAlt">
                         <div class="info">
@@ -769,7 +769,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img3.jpg" alt="slideAlt">
                         <div class="info">
@@ -793,7 +793,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img4.jpg" alt="slideAlt">
                         <div class="info">
@@ -817,7 +817,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img1.jpg" alt="slideAlt">
                         <div class="info">
@@ -841,7 +841,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img2.jpg" alt="slideAlt">
                         <div class="info">
@@ -865,7 +865,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img3.jpg" alt="slideAlt">
                         <div class="info">
@@ -889,7 +889,7 @@
                         </div>
                     </div>         
                 </a>    
-                <a href="#!" class="slide">
+                <a href="product.html" class="slide">
                     <div class="img">
                         <img src="../assets/imgs/img4.jpg" alt="slideAlt">
                         <div class="info">
@@ -912,7 +912,7 @@
                            <p class="final">500000 تومان</p>
                         </div>
                     </div>         
-                </a>    
+                </a>                  
             </div>
         </div> 
     </div>
