--- a/src/special/special.html
+++ b/src/special/special.html
@@ -358,6 +358,14 @@
                                 <li data-value="val2">کارینو</li>
                             </ul>
                         </div>
+                        <div class="inputWrapper textarea">
+                            <textarea name="details" id="details" class="style1 labelHandler validate"></textarea>
+                            <label for="details">
+                                <i class="fas fa-comments"></i>
+                                <p>توضیحات بیشتر</p>
+                            </label>
+                            <span class="line"></span>
+                        </div>
                     </div>
                 </div>
                 <button type="submit">ثبت سفارش</button>
