--- a/src/basket/basket.html
+++ b/src/basket/basket.html
@@ -197,6 +197,46 @@
             </div>
         </form>
     </header>
+    <i class="fas fa-bars" id="menuToggle"></i>
+    <aside>
+        <div class="logo">
+            <img src="../assets/icons/logo.png" alt="logoAlt">
+            <h4>نام کاربری</h4>
+        </div>
+        <ul>
+            <li>
+                <a href="userInfo.html">
+                    <i class="fas fa-user-edit"></i>
+                    <p>ویرایش مشخصات کاربری</p>
+                </a>
+            </li>
+            <li>
+                <a href="changePassword.html">
+                    <i class="fas fa-lock"></i>
+                    <p> تغییر رمز ورود </p>
+                </a>         
+            </li>
+            <li>
+                <a href="basket.html">
+                    <i class="fas fa-shopping-basket"></i>
+                    <p> سبد خرید </p>
+                </a>      
+            </li>
+            <li>        
+                <a href="orders.html">
+                    <i class="fas fa-shopping-cart"></i>
+                    <p> سفارشات من </p>
+                </a>          
+            </li>
+            <li>
+                <a href="#!.html">
+                    <i class="fas fa-sign-out-alt"></i>
+                    <p> خروج </p>
+                </a>
+            </li>
+        </ul>
+    </aside>
+    <div id="blackFilter"></div>
     <div id="timelineWrapper" class="containerStyle">
         <div id="timeline">
             <span class="line" style="width:0%"></span>
